--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,11 +27,35 @@ body {
 .content-section_theme_dark {
   background-color: #000000;
   color: #f5f5f5;
-  height: 100px;
 }
 
 .content-section_theme_bright {
   background-color: #fee42a;
-  height: 100px;
   color: #131313;
+}
+
+.header {
+  padding: 24px 20px;
+}
+
+.cover {
+  padding: 7px 0 0 20px;
+  background-image: url("../images/cover.svg");
+  background-repeat: no-repeat;
+}
+
+.intro {
+  padding: 30px 20px 38px 20px;
+}
+
+.reasons {
+  padding: 40px 20px;
+}
+
+.how-to {
+  padding: 40px 20px 60px 20px;
+}
+
+.footer {
+  padding: 20px;
 }
