--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,36 @@ body {
 }
 
 .header {
+  display: flex;
   padding: 24px 20px;
+}
+
+.header__logo {
+  width: 78px;
+}
+
+.header__logo-image {
+  width: 78px;
+  height: 15px;
+}
+
+.header__menu {
+}
+
+.header__menu-list {
+
+}
+
+.header__menu-item {
+
+}
+
+.header__menu-item_active {
+
+}
+
+.header__menu-link {
+
 }
 
 .cover {
