--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ blockquote {
 }
 
 body {
+  margin: 0;
   background-color: #1e1e1e;
 }
 
@@ -36,6 +37,7 @@ body {
 
 .header {
   display: flex;
+  justify-content: space-between;
   padding: 24px 20px;
 }
 
@@ -52,19 +54,26 @@ body {
 }
 
 .header__menu-list {
-
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+  list-style-type: none;
 }
 
 .header__menu-item {
-
-}
-
-.header__menu-item_active {
-
+  color: #f5f5f5;
 }
 
 .header__menu-link {
+  text-decoration: none;
+}
 
+.header__menu-item_active:hover {
+  color: #f5f5f5;
+}
+
+.header__menu-item_active:visited {
+  color: #f5f5f5;
 }
 
 .cover {
