--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* @import url("../fonts/fonts.css"); */
+@import url("../fonts/fonts.css");
 
 h1,
 h2,
@@ -77,7 +77,7 @@ body {
   padding: 7px 24px 33px 20px;
   background-image: url("../images/cover.svg");
   background-size: 95% auto;
-  min-height: 221px;
+  min-height: 220px;
   background-position: right;
   background-repeat: no-repeat;
 }
@@ -105,9 +105,36 @@ body {
   padding: 30px 20px 38px 20px;
 }
 
+.intro__heading {
+  display: flex;
+}
+
+.intro__title {
+  font-size: 16px;
+  color: #ccc;
+  line-height: 120%;
+}
+
+.intro__date {
+  font-size: 16px;
+  color: #ccc;
+  line-height: 120%;
+  white-space: nowrap;
+}
+
+.intro__main-text {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding-top: 24px;
+  line-height: 135%;
+}
+
 .reasons {
   padding: 40px 20px;
 }
+
+
 
 .how-to {
   padding: 40px 20px 60px 20px;
