--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -15,7 +15,8 @@
 @font-face {
   font-family: "EB Garamond";
   src: local("EB Garamond Medium"), local("EBGaramondMedium"),
-    local("EB-Garamond-medium") url("./ebgaramondmedium.woff") format("woff"),
+    local("EB-Garamond-medium") 
+    url("./ebgaramondmedium.woff") format("woff"),
     url("./ebgaramondmedium.woff2") format("woff2");
   /* url("./ebgaramondmedium.ttf") format("truetipe"); */
   font-weight: 500;
@@ -27,7 +28,8 @@
 
 @font-face {
   font-family: "Inter";
-  src: local("Inter"), local("inter"), url("./interregular.woff") format("woff"),
+  src: local("Inter"), local("inter"), 
+    url("./interregular.woff") format("woff"),
     url("./interregular.woff2") format("woff2");
   /* url("./interregular.ttf") format("truetipe"); */
   font-weight: 400;
@@ -38,7 +40,8 @@
 @font-face {
   font-family: "Inter";
   src: local("InterBold"), local("interbold"),
-    local("Inter-Bold") url("./interbold.woff") format("woff"),
+    local("Inter-Bold") 
+    url("./interbold.woff") format("woff"),
     url("./interbold.woff2") format("woff2");
   /* url("./interbold.ttf") format("truetipe"); */
 
