--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-@import url("../fonts/fonts.css");
-
 h1,
 h2,
 h3,
@@ -19,6 +17,7 @@ body {
   background-color: #1e1e1e;
 }
 
+/* header__menu-item_active попробовать задать li тегу  */
 .content-section {
   box-sizing: border-box;
   width: 360px;
@@ -42,12 +41,12 @@ body {
 }
 
 .header__logo {
+  display: block;
   width: 78px;
 }
 
 .header__logo-image {
-  width: 78px;
-  height: 15px;
+  width: 100%;
 }
 
 .header__menu-list {
@@ -153,7 +152,7 @@ body {
   flex-direction: column;
   row-gap: 16px;
   line-height: 135%;
-  padding: 0 0 0 16px;
+  padding-left: 16px;
 }
 
 .content-section__list-accent {
@@ -164,6 +163,72 @@ body {
   padding: 40px 20px 60px 20px;
 }
 
-.footer {
+.cards-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+  list-style: none;
+}
+
+.card {
   padding: 20px;
+}
+
+.card_theme_dark {
+  background-color: #343434;
+  border-radius: 30px;
+}
+
+.card_theme_bright {
+  background-color: #fee42a;
+  color: #131313;
+  border-radius: 30px;
+}
+
+.card__author {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.card__author-photo {
+  display: block;
+  width: 100px;
+  border-radius: 50%;
+}
+
+.card__author-name {
+  font-weight: 700;
+  line-height: 135%;
+}
+
+.card__title {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 135%;
+}
+
+.card_text {
+  line-height: 135%;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border-top: 1px solid #fee42a;
+}
+
+.footer__links {
+  display: flex;
+  gap: 16px;
+  list-style: none;
+}
+
+.footer__links a {
+  color: #f5f5f5;
+  font-size: 14px;
+  text-decoration: none;
+  line-height: 125%;
 }
