--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,9 +3,8 @@
 @font-face {
   font-family: "EB Garamond";
   src: local("EB Garamond"), local("EBGaramond"), local("EB-Garamond"),
-    url("./ebgaramondregular.woff") format("woff"),
-    url("./ebgaramondregular.woff2") format("woff2");
-  /* url("./ebgaramondregular.ttf") format("truetipe"); */
+    url("./ebgaramondregular.woff2") format("woff2"),
+    url("./ebgaramondregular.woff") format("woff");
 
   font-weight: 400;
   font-style: normal;
@@ -15,10 +14,9 @@
 @font-face {
   font-family: "EB Garamond";
   src: local("EB Garamond Medium"), local("EBGaramondMedium"),
-    local("EB-Garamond-medium") 
-    url("./ebgaramondmedium.woff") format("woff"),
-    url("./ebgaramondmedium.woff2") format("woff2");
-  /* url("./ebgaramondmedium.ttf") format("truetipe"); */
+    local("EB-Garamond-medium")
+    url("./ebgaramondmedium.woff2") format("woff2"),
+    url("./ebgaramondmedium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -29,9 +27,8 @@
 @font-face {
   font-family: "Inter";
   src: local("Inter"), local("inter"), 
-    url("./interregular.woff") format("woff"),
-    url("./interregular.woff2") format("woff2");
-  /* url("./interregular.ttf") format("truetipe"); */
+    url("./interregular.woff2") format("woff2"),
+    url("./interregular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -41,9 +38,8 @@
   font-family: "Inter";
   src: local("InterBold"), local("interbold"),
     local("Inter-Bold") 
-    url("./interbold.woff") format("woff"),
-    url("./interbold.woff2") format("woff2");
-  /* url("./interbold.ttf") format("truetipe"); */
+    url("./interbold.woff2") format("woff2"),
+    url("./interbold.woff") format("woff");
 
   font-weight: 700;
   font-style: normal;
